NXP-32866: Extract SQL audit implementation to its own module